# prost-generation-wrapper

./: Cargo.toml  README.md
src/: main.rs
