[package]
name = "rust-protobuf-binding-generator"
version = "0.1.0"
authors = ["mieubrisse <mieubrisse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4"
pretty_env_logger = "0.4"
tonic-build = "0.4.0"
